--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "async": "^0.9.0",
     "lodash": "^2.4.1",
     "redis": "^0.12.1",
-    "spid-storage-configuration-interface": "0.0.1"
+    "spid-storage-configuration-interface": "~0.0.2"
   },
   "scripts": {
     "test": "mocha test/*"
