--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "spid-storage-configuration-interface": "~0.0.2"
   },
   "scripts": {
-    "test": "mocha test/*"
+    "test": "mocha -t 5000 test/*"
   },
   "devDependencies": {
     "chai": "^1.9.1",
